# Agentic-AI-for-Automated-Literature-Analysis-and-Synthesis

./: README.md  main.py  pyproject.toml
semantic_scholar_crew/: README.md  eeg_schizophrenia_detection_ml_papers.json  eeg_schizophrenia_ml_papers.json  pyproject.toml
semantic_scholar_crew/src/semantic_scholar_crew/: crew.py  eeg_schizophrenia_detection.json  main.py  output.json  semantic_scholar_guidelines.md
semantic_scholar_crew/src/semantic_scholar_crew/config/: agents.yaml  tasks.yaml
semantic_scholar_crew/src/semantic_scholar_crew/outputs/: final_survey.md  out.md
