[project]
name = "semantic_scholar_crew"
version = "0.1.0"
description = "semantic_scholar_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
semantic_scholar_crew = "semantic_scholar_crew.main:run"
run_crew = "semantic_scholar_crew.main:run"
train = "semantic_scholar_crew.main:train"
replay = "semantic_scholar_crew.main:replay"
test = "semantic_scholar_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
